--- a/show_me_the_pets_client/package.json
+++ b/show_me_the_pets_client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
